--- a/index.html
+++ b/index.html
@@ -3,90 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galeria de imagenes::Hover</title>
+    <title>Proyecto 2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="contenedor">
-      <h1>PRACTICA 01</h1>
-      <div class="imagen">
-        <div>Titulo de la imagen</div>
-        <img
-          src="https://i.pinimg.com/originals/6d/5f/df/6d5fdf85f8b735e19df39fa059c1c455.gif"
-          alt=""
-        />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
-      </div>
-      <div class="imagen">
-        <div>Titulo de la imagen</div>
-        <img
-          src="https://i.pinimg.com/236x/6c/29/08/6c2908633c272b748ec16bde67fe2549.jpg"
-          alt=""
-        />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
-      </div>
+    <h1>PROYECTO 2:</h1>
 
+    Temas:
+    <ul>
+      <li>
+        1. Que es una clase y como usarlo para seleccionar? puedo ponerle la
+        misma clase a varios contenedores?
+      </li>
+
+      <li>2. Como uso object fit en una imagen? para que sirve?</li>
+      <li>3. Como selecionar la etiqueta img dentro de un div?</li>
+      <li>
+        4. Que propiedades puedo cambiar con hover? le puedo colocar hover a una
+        clase y/o a una etiqueta? se puede cambiar el fondo y los bordes al
+        mismo tiempo?
+      </li>
+      <li>5.Como centrar items dentro de un contenedor con flex?</li>
+      <li>6. Que es display: flex, flex-direction: column o row</li>
+      <li>
+        7. Que es una transition en css? se puede colocar a cualquier
+        contenedor? dame un ejemplo con un div y una img?
+      </li>
+
+      <li>
+        8. Como le pongo un alto y un ancho maximo/minimo a una imagen? que es
+        width 100%, y width: 500px
+      </li>
+
+      <li></li>
+      <li>CONTENEDORES USADOS EN ESTE PROYECTO: &lt;div&gt; &lt;img&gt;</li>
+    </ul>
+
+    <div
+      style="
+        display: flex;
+        gap: 1rem;
+        align-items: center;
+        justify-content: center;
+
+        height: 100vh;
+      "
+    >
       <div class="imagen">
-        <div>Titulo de la imagen</div>
         <img
-          src="https://i.pinimg.com/originals/67/e2/68/67e2687af9f32ef46277b9d1e713189a.gif"
+          src="https://i.pinimg.com/564x/71/70/47/717047ae2220528f3bc5358030cf0462.jpg"
           alt=""
         />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
       </div>
       <div class="imagen">
-        <div>Titulo de la imagen</div>
         <img
-          src="https://i.pinimg.com/originals/7b/6d/ef/7b6def1234d467fcc28e77c9cc7e3eda.gif"
+          src="https://i.pinimg.com/564x/99/a2/83/99a2832a92728a342447cc499be256d9.jpg"
           alt=""
         />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
       </div>
       <div class="imagen">
-        <div>Titulo de la imagen</div>
         <img
-          src="https://i.pinimg.com/236x/6e/d9/dd/6ed9ddfd1b93d79250e3c27088378872.jpg"
+          src="https://i.pinimg.com/564x/10/57/ae/1057aea87b7a625d1c8d88a087c71a07.jpg"
           alt=""
         />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
       </div>
       <div class="imagen">
-        <div>Titulo de la imagen</div>
         <img
-          src="https://i.pinimg.com/236x/17/3a/00/173a008888e973ea51e6f5fa809d7972.jpg"
+          src="https://i.pinimg.com/564x/e1/b0/4c/e1b04cee4284f915868b7c4449cf2205.jpg"
           alt=""
         />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
       </div>
     </div>
   </body>
