--- a/index.html
+++ b/index.html
@@ -8,86 +8,8 @@
   </head>
   <body>
     <div class="contenedor">
-      <h1>PRACTICA 01</h1>
-      <div class="imagen">
-        <div>Titulo de la imagen</div>
-        <img
-          src="https://i.pinimg.com/originals/6d/5f/df/6d5fdf85f8b735e19df39fa059c1c455.gif"
-          alt=""
-        />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
-      </div>
-      <div class="imagen">
-        <div>Titulo de la imagen</div>
-        <img
-          src="https://i.pinimg.com/236x/6c/29/08/6c2908633c272b748ec16bde67fe2549.jpg"
-          alt=""
-        />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
-      </div>
-
-      <div class="imagen">
-        <div>Titulo de la imagen</div>
-        <img
-          src="https://i.pinimg.com/originals/67/e2/68/67e2687af9f32ef46277b9d1e713189a.gif"
-          alt=""
-        />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
-      </div>
-      <div class="imagen">
-        <div>Titulo de la imagen</div>
-        <img
-          src="https://i.pinimg.com/originals/7b/6d/ef/7b6def1234d467fcc28e77c9cc7e3eda.gif"
-          alt=""
-        />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
-      </div>
-      <div class="imagen">
-        <div>Titulo de la imagen</div>
-        <img
-          src="https://i.pinimg.com/236x/6e/d9/dd/6ed9ddfd1b93d79250e3c27088378872.jpg"
-          alt=""
-        />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
-      </div>
-      <div class="imagen">
-        <div>Titulo de la imagen</div>
-        <img
-          src="https://i.pinimg.com/236x/17/3a/00/173a008888e973ea51e6f5fa809d7972.jpg"
-          alt=""
-        />
-        <p>
-          descripcion: Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-          Debitis unde laboriosam commodi praesentium ratione aut quis
-          temporibus ad similique nihil at alias illo voluptates, molestias,
-          dolorem quae magnam ipsa vitae!
-        </p>
-      </div>
+      <a href="hola.com"> CAPITULO 11</a>
+      <a href="hola.com"> CAPITULO 12</a>
     </div>
   </body>
 </html>
