--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <div class="contenedor">
-      <a href="hola.com"> CAPITULO 11</a>
-      <a href="hola.com"> CAPITULO 12</a>
+      <div class="link">
+        <a href="https://t.ly/OMTDQ"> CAPITULO 11</a>
+      </div>
+      <div class="link">
+        <a href="https://t.ly/uYKYL"> CAPITULO 12</a>
+      </div>
     </div>
   </body>
 </html>
