--- a/index.html
+++ b/index.html
@@ -8,11 +8,32 @@
   </head>
   <body>
     <div class="contenedor">
-      <div class="link">
-        <a href="https://t.ly/OMTDQ"> CAPITULO 11</a>
+      <h1>Ore dake Level Up na Ken</h1>
+      <div class="anime">
+        <div class="link">
+          <a href="https://t.ly/OMTDQ"> CAPITULO 11</a>
+        </div>
+        <div class="link">
+          <a href="https://t.ly/uYKYL"> CAPITULO 12</a>
+        </div>
       </div>
-      <div class="link">
-        <a href="https://t.ly/uYKYL"> CAPITULO 12</a>
+      <h1>MASHLE Kami Shinkakusha Kouho Senbatsu Shiken-hen</h1>
+      <div class="anime">
+        <div class="link">
+          <a
+            href="
+          https://terabox.com/sharing/embed?surl=MIad7ixxpn7QaFqNpRiyXw&resolution=1080&autoplay=true&mute=false&uk=4399467314851&fid=854958604502276&slid="
+          >
+            CAPITULO 11</a
+          >
+        </div>
+        <div class="link">
+          <a
+            href="https://terabox.com/sharing/embed?surl=hbpEdNkxYbPR6A52gcntqQ&resolution=1080&autoplay=true&mute=false&uk=4399467314851&fid=380345514295152&slid="
+          >
+            CAPITULO 12</a
+          >
+        </div>
       </div>
     </div>
   </body>
