--- a/index.html
+++ b/index.html
@@ -7,33 +7,53 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="contenedor">
-      <h1>Ore dake Level Up na Ken</h1>
-      <div class="anime">
-        <div class="link">
-          <a href="https://t.ly/OMTDQ"> CAPITULO 11</a>
-        </div>
-        <div class="link">
-          <a href="https://t.ly/uYKYL"> CAPITULO 12</a>
-        </div>
+    <div class="preguntas">
+      <ul>
+        <li>Como  hacer  que al darle click a un texto me redireccione a una imagen, si solo tengo el enlace de la imagen? html</li>
+        <li>Como cambiar el color del texto de una etiqueta < a ></li>
+        <li>Como quitar el subrayado de una etiqueta < a ></a></li>
+        <li>Como cambiar la fuente de mi pagina? cuales existen por defecto</li>
+        <li>Como cambiar el tamaño de una img con pixeles</li>
+        <li>
+          Como colocar el texto en negrita o mas grueso? asi como un titulo
+        </li>
+        <li>Como cambiar el tamaño del texto con pixeles?</li>
+        <li>
+          Como agregar espacios o relleno a los bordes de mi contenedor? padding
+          o margin?
+        </li>
+
+        <li>CONTENEDORES USADOS:   < div > < img > < a ></li>
+      </ul>
+    </div>
+    <div class="capitulos">
+      <div class="titulo">Captain Tsubasa</div>
+      <div class="capitulo">
+        <img src="play.png" alt="" />
+        <a
+          href="https://i.pinimg.com/474x/d9/d8/4f/d9d84f44940d066b2b355f585cefa198.jpg"
+          >Captain Tsubasa Season 2: Junior Youth-hen Episodio 7</a
+        >
       </div>
-      <h1>MASHLE Kami Shinkakusha Kouho Senbatsu Shiken-hen</h1>
-      <div class="anime">
-        <div class="link">
-          <a
-            href="
-          https://terabox.com/sharing/embed?surl=MIad7ixxpn7QaFqNpRiyXw&resolution=1080&autoplay=true&mute=false&uk=4399467314851&fid=854958604502276&slid="
-          >
-            CAPITULO 11</a
-          >
-        </div>
-        <div class="link">
-          <a
-            href="https://terabox.com/sharing/embed?surl=hbpEdNkxYbPR6A52gcntqQ&resolution=1080&autoplay=true&mute=false&uk=4399467314851&fid=380345514295152&slid="
-          >
-            CAPITULO 12</a
-          >
-        </div>
+      <div class="capitulo">
+        <img src="play.png" alt="" />
+        <a href="https://i.pinimg.com/564x/b9/32/31/b9323115028a680f7eb2392f1da113dc.jpg">Captain Tsubasa Season 2: Junior Youth-hen Episodio 5</a>
+      </div>
+      <div class="capitulo">
+        <img src="play.png" alt="" />
+        <a href="https://i.pinimg.com/564x/49/59/de/4959de9e5144e184c7d36763383e53cf.jpg">Captain Tsubasa Season 2: Junior Youth-hen Episodio 4</a>
+      </div>
+      <div class="capitulo">
+        <img src="play.png" alt="" />
+        <a href="https://i.pinimg.com/564x/b4/bd/75/b4bd7533f09e3c9f4c4ed0839ed6eeca.jpg">Captain Tsubasa Season 2: Junior Youth-hen Episodio 3</a>
+      </div>
+      <div class="capitulo">
+        <img src="play.png" alt="" />
+        <a href="https://i.pinimg.com/564x/a7/23/3c/a7233cafb486c99b535177b16c249578.jpg">Captain Tsubasa Season 2: Junior Youth-hen Episodio 2</a>
+      </div>
+      <div class="capitulo">
+        <img src="play.png" alt="" />
+        <a href="https://i.pinimg.com/564x/79/4c/ea/794ceaab392bafa7900ce1d313fffa40.jpg">Captain Tsubasa Season 2: Junior Youth-hen Episodio 1</a>
       </div>
     </div>
   </body>
