--- a/index.html
+++ b/index.html
@@ -37,48 +37,47 @@
       </ul>
     </div>
     <div class="conteiner">
-      <div class="fila fila1">
-        <div class="item">
-          <img
-            src="https://i.pinimg.com/564x/0a/f5/a4/0af5a48507d189ba2cd57f7b3d00e89d.jpg"
-            alt=""
-          />
-        </div>
-
-        <div class="item">
-          <img
-            src="https://i.pinimg.com/564x/16/fd/68/16fd68e0c8dd216d6adf24721967ac8a.jpg"
-            alt=""
-          />
-        </div>
-      </div>
-      <div class="fila fila2">
-        <div class="item">
-          <img
-            src="https://i.pinimg.com/236x/31/fb/34/31fb348bae0daeddf0236f250e7c22e1.jpg"
-            alt=""
-          />
-        </div>
-        <div class="item">
-          <img
-            src="https://i.pinimg.com/736x/f2/d3/60/f2d360e674ff572e39a130d108f6e55b.jpg"
-            alt=""
-          />
-        </div>
-        <div class="item">
-          <img
-            src="https://i.pinimg.com/564x/bf/58/49/bf5849c9fe4e498db7ed74e9832b3e33.jpg"
-            alt=""
-          />
-        </div>
-      </div>
-      <div class="fila fila3">
-        <div class="item">
+      <div class="video-conteiner">
+        <div class="video">
           <img
             src="https://i.pinimg.com/736x/4e/49/e3/4e49e330e2525ff5ba59f3948b31cbfb.jpg"
             alt=""
           />
         </div>
+        <div class="detalles">
+          <div class="perfil">
+            <img
+              src="https://i.pinimg.com/564x/ce/72/49/ce7249d5518114c2052e0ac7c2b7be33.jpg"
+              alt=""
+            />
+          </div>
+          <div class="titulo">
+            Yoshi Inhales Coke and Mentos, What Could Go Wrong?
+          </div>
+        </div>
+        <div class="autor">lluvrari</div>
+
+        <div class="vistas">2.9 M de vistas - Hace 2 años</div>
+      </div>
+      <div class="video-conteiner">
+        <div class="video">
+          <img
+            src="https://i.pinimg.com/564x/e3/e2/b7/e3e2b7ade2e937e038daf1c55ced537a.jpg"
+            alt=""
+          />
+        </div>
+        <div class="detalles">
+          <div class="perfil">
+            <img
+              src="https://i.pinimg.com/564x/89/fb/e4/89fbe49c351e8cf2f22aa0d831962258.jpg"
+              alt=""
+            />
+          </div>
+          <div class="titulo">I lost my finger.. so I made a new one</div>
+        </div>
+        <div class="autor">Nerdforge</div>
+
+        <div class="vistas">2.9 M de vistas - Hace 2 años</div>
       </div>
     </div>
   </body>
