--- a/index.html
+++ b/index.html
@@ -10,29 +10,25 @@
     <div class="instruciones">
       <ul>
         <li>INVESTIGAR LAS SIGUIENTES PREGUNTAS:</li>
-        <li>Como poner bordes? como cambiar el grosor, y el color?</li>
+        <li>Como poner la imagen en object fit cover, y cual es la diferencia con el por defecto? uso una img dentro de un div, la clase la tiene  el div.</li>
         <li>Le puedo dar un ancho diferente al padre que al elemento hijo?</li>
         <li>
           Como puedo centrar verticalmente y horizontalmente a los hijos en un
           contenedor flex box
         </li>
         <li>
-          Puede un div tener 2 clases diferentes? por ejempo class= "caja
-          caja-1" Para que me serviria hacer eso?
+             Para que sirve flex direction,  column, row? 
         </li>
         <li>
-          Que es object fit? solo sirve si lo aplico a la imagen hija, y no al
-          padre? tengo un div con un img dentro
+            Como alejar contenedor con margin? 
         </li>
 
         <li>
-          Puedo tener muchos div dentros de otros? por ejemplo un div con 5 div
-          dentros, cada div hijo tiene 3 img
+          Puedo tener muchos div dentros de otros? 
         </li>
-
+      
         <li>
-          Para que sirve width:100% height:100%? En que casos funciona y en
-          cuales no? Necesita el padre una medida fija?
+          cuantas veces puedo ocupar flexbox?  solo le puedo poner al padre? y si los hijos tienen hijos que quiero alinear?
         </li>
       </ul>
     </div>
