--- a/index.html
+++ b/index.html
@@ -37,48 +37,47 @@
       </ul>
     </div>
     <div class="conteiner">
-      <div class="video-conteiner">
-        <div class="video">
+      <div class="imagenes">
+        <div class="imagen">
           <img
-            src="https://i.pinimg.com/736x/4e/49/e3/4e49e330e2525ff5ba59f3948b31cbfb.jpg"
+            src="https://i.pinimg.com/originals/6a/23/3c/6a233c5f66f17b7adcc39a71bf31317b.gif"
             alt=""
           />
         </div>
-        <div class="detalles">
-          <div class="perfil">
-            <img
-              src="https://i.pinimg.com/564x/ce/72/49/ce7249d5518114c2052e0ac7c2b7be33.jpg"
-              alt=""
-            />
-          </div>
-          <div class="titulo">
-            Yoshi Inhales Coke and Mentos, What Could Go Wrong?
-          </div>
-        </div>
-        <div class="autor">lluvrari</div>
-
-        <div class="vistas">2.9 M de vistas - Hace 2 años</div>
-      </div>
-      <div class="video-conteiner">
-        <div class="video">
+        <div class="imagen">
           <img
-            src="https://i.pinimg.com/564x/e3/e2/b7/e3e2b7ade2e937e038daf1c55ced537a.jpg"
+            src="https://i.pinimg.com/originals/f4/0e/9d/f40e9d41be1c5d66287e08e13e5bc882.gif"
             alt=""
           />
         </div>
-        <div class="detalles">
-          <div class="perfil">
-            <img
-              src="https://i.pinimg.com/564x/89/fb/e4/89fbe49c351e8cf2f22aa0d831962258.jpg"
-              alt=""
-            />
-          </div>
-          <div class="titulo">I lost my finger.. so I made a new one</div>
+        <div class="imagen">
+          <img
+            src="https://i.pinimg.com/originals/98/94/f7/9894f73861f84b4965f5a910de032567.gif"
+            alt=""
+          />
         </div>
-        <div class="autor">Nerdforge</div>
-
-        <div class="vistas">2.9 M de vistas - Hace 2 años</div>
       </div>
+      <div class="titulo">
+        <div class="letra">T</div>
+        <div class="letra">E</div>
+        <div class="letra">X</div>
+        <div class="letra">T</div>
+        <div class="letra">O</div>
+        <div class="letra">-</div>
+        <!-- Espacio -->
+        <div class="letra">D</div>
+        <div class="letra">E</div>
+        <div class="letra">-</div>
+        <!-- Espacio -->
+        <div class="letra">P</div>
+        <div class="letra">R</div>
+        <div class="letra">U</div>
+        <div class="letra">E</div>
+        <div class="letra">B</div>
+        <div class="letra">A</div>
+      </div>
+
+      <div class="subtitulo">Subtitulo de prueba</div>
     </div>
   </body>
 </html>
