--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="instruciones">
       <ul>
         <li>INVESTIGAR LAS SIGUIENTES PREGUNTAS:</li>
+         
         <li>Como poner bordes? como cambiar el grosor, y el color?</li>
         <li>Le puedo dar un ancho diferente al padre que al elemento hijo?</li>
         <li>
@@ -17,12 +18,13 @@
           contenedor flex box
         </li>
         <li>
-          Puede un div tener 2 clases diferentes? por ejempo class= "caja
-          caja-1" Para que me serviria hacer eso?
+          Como cambiar la fuente del texto? por ejemplo IMPACT o Courier? donde puedo ver todas las fuentes para elegir la que mas que guste?
         </li>
         <li>
-          Que es object fit? solo sirve si lo aplico a la imagen hija, y no al
-          padre? tengo un div con un img dentro
+           Puedo cambiarle la fuente a cada contendor, o solo al body? que pasa si le pongo una fuente al body y luego otra a un contenedor? 
+        </li>
+        <li>
+          Que es google fonts? como usar sus fuentes?
         </li>
 
         <li>
@@ -31,9 +33,13 @@
         </li>
 
         <li>
-          Para que sirve width:100% height:100%? En que casos funciona y en
-          cuales no? Necesita el padre una medida fija?
+            Como cambiar el tamaño de un contenedor con pixeles? con hover?
         </li>
+           <li>
+            Que debo hacer para que una imagen sea object fit cover? 
+        </li>
+
+  
       </ul>
     </div>
     <div class="conteiner">
