--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
       <ul>
         <li>INVESTIGAR LAS SIGUIENTES PREGUNTAS:</li>
         <li>Como poner bordes? como cambiar el grosor, y el color?</li>
-        <li>Le puedo dar un ancho diferente al padre que al elemento hijo?</li>
+        <li>
+          Como cambiar el borde de un input al estar escribiendo en el? o cuando
+          esta en foco
+        </li>
+        <li>Que es un placeholder y como ponerle a un input</li>
+        <li>
+          Que es un bottom? como le puedo cambiar el color de fondo cuando le
+          dan click?
+        </li>
+        <li>Como cambiar el color y tamaño del texto de un boton?</li>
         <li>
           Como puedo centrar verticalmente y horizontalmente a los hijos en un
           contenedor flex box
@@ -29,32 +38,43 @@
           Puedo tener muchos div dentros de otros? por ejemplo un div con 5 div
           dentros, cada div hijo tiene 3 img
         </li>
-
+        <li>
+          Como posisionar un elemento en un contenedor con position relative? la
+          imagen que tipo de position debe tener?
+        </li>
+        <li>
+          Como mover un elemento con position absolute? Left, Right,Top, Bottom?
+          el padre debe ser position relative?
+        </li>
         <li>
           Para que sirve width:100% height:100%? En que casos funciona y en
           cuales no? Necesita el padre una medida fija?
         </li>
+        <li>Que es Z-index?</li>
       </ul>
     </div>
     <div class="conteiner">
       <div class="imagenes">
         <div class="imagen">
           <img
-            src="https://i.pinimg.com/originals/6a/23/3c/6a233c5f66f17b7adcc39a71bf31317b.gif"
+            src="https://i.pinimg.com/originals/07/49/5b/07495befb71e71f800711eee3d4cebc8.gif"
             alt=""
           />
+          <div class="titulo-imagen">IMAGEN 1</div>
         </div>
         <div class="imagen">
           <img
             src="https://i.pinimg.com/originals/f4/0e/9d/f40e9d41be1c5d66287e08e13e5bc882.gif"
             alt=""
           />
+          <div class="titulo-imagen">IMAGEN 2</div>
         </div>
         <div class="imagen">
           <img
-            src="https://i.pinimg.com/originals/98/94/f7/9894f73861f84b4965f5a910de032567.gif"
+            src="https://i.pinimg.com/originals/3a/22/87/3a2287b43b93c26a78a074576eb557df.gif"
             alt=""
           />
+          <div class="titulo-imagen">IMAGEN 3</div>
         </div>
       </div>
       <div class="titulo">
@@ -77,7 +97,13 @@
         <div class="letra">A</div>
       </div>
 
-      <div class="subtitulo">Subtitulo de prueba</div>
+      <div class="input-conteiner">
+        <input class="input" type="text" placeholder="Ingresa su texto aqui" />
+        <img src="lupa.png" alt="" />
+      </div>
+      <div class="btn">
+        <button>Click</button>
+      </div>
     </div>
   </body>
 </html>
