--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto4</title>
+    <title>Proyecto9</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -11,15 +11,9 @@
       <ul>
         <li>INVESTIGAR LAS SIGUIENTES PREGUNTAS:</li>
         <li>Como poner bordes? como cambiar el grosor, y el color?</li>
-        <li>
-          Como cambiar el borde de un input al estar escribiendo en el? o cuando
-          esta en foco
-        </li>
-        <li>Que es un placeholder y como ponerle a un input</li>
-        <li>
-          Que es un bottom? como le puedo cambiar el color de fondo cuando le
-          dan click?
-        </li>
+        <li>Como poner bordes redondeados?</li>
+        <li>Que es backdrop filter, y como poner fondo transparente borroso</li>
+
         <li>Como cambiar el color y tamaño del texto de un boton?</li>
         <li>
           Como puedo centrar verticalmente y horizontalmente a los hijos en un
@@ -39,70 +33,60 @@
           dentros, cada div hijo tiene 3 img
         </li>
         <li>
-          Como posisionar un elemento en un contenedor con position relative? la
-          imagen que tipo de position debe tener?
+          Como cambiar el fondo de un conteiner, por una imagen, y que
+          backdround sizes existen, y para que sirve cada uno.
         </li>
-        <li>
-          Como mover un elemento con position absolute? Left, Right,Top, Bottom?
-          el padre debe ser position relative?
-        </li>
-        <li>
-          Para que sirve width:100% height:100%? En que casos funciona y en
-          cuales no? Necesita el padre una medida fija?
-        </li>
+
+        <li>Que es "transtition: all 1s" como lo uso?</li>
         <li>Que es Z-index?</li>
       </ul>
     </div>
     <div class="conteiner">
-      <div class="imagenes">
-        <div class="imagen">
-          <img
-            src="https://i.pinimg.com/originals/07/49/5b/07495befb71e71f800711eee3d4cebc8.gif"
-            alt=""
-          />
-          <div class="titulo-imagen">IMAGEN 1</div>
+      <div class="menu">
+        <div class="header">
+          <div class="titulo">Just a minute</div>
+          <div class="subtitle">Give access to your devices</div>
         </div>
-        <div class="imagen">
-          <img
-            src="https://i.pinimg.com/originals/f4/0e/9d/f40e9d41be1c5d66287e08e13e5bc882.gif"
-            alt=""
-          />
-          <div class="titulo-imagen">IMAGEN 2</div>
+        <div class="option">
+          <div class="icon">
+            <img
+              src="https://www.iconpacks.net/icons/1/free-microphone-icon-342-thumb.png"
+              alt=""
+            />
+          </div>
+          <div class="content">
+            <div class="content-titulo">Microphone</div>
+            <p class="content-subtitulo">For everyone to hear you</p>
+          </div>
+          <div class="switch"><button></button></div>
         </div>
-        <div class="imagen">
-          <img
-            src="https://i.pinimg.com/originals/3a/22/87/3a2287b43b93c26a78a074576eb557df.gif"
-            alt=""
-          />
-          <div class="titulo-imagen">IMAGEN 3</div>
+        <div class="option">
+          <div class="icon">
+            <img
+              src="https://www.iconpacks.net/icons/1/free-microphone-icon-342-thumb.png"
+              alt=""
+            />
+          </div>
+          <div class="content">
+            <div class="content-titulo">Microphone</div>
+            <p class="content-subtitulo">For everyone to hear you</p>
+          </div>
+          <div class="switch"><button></button></div>
         </div>
-      </div>
-      <div class="titulo">
-        <div class="letra">T</div>
-        <div class="letra">E</div>
-        <div class="letra">X</div>
-        <div class="letra">T</div>
-        <div class="letra">O</div>
-        <div class="letra">-</div>
-        <!-- Espacio -->
-        <div class="letra">D</div>
-        <div class="letra">E</div>
-        <div class="letra">-</div>
-        <!-- Espacio -->
-        <div class="letra">P</div>
-        <div class="letra">R</div>
-        <div class="letra">U</div>
-        <div class="letra">E</div>
-        <div class="letra">B</div>
-        <div class="letra">A</div>
-      </div>
+        <div class="option">
+          <div class="icon">
+            <img
+              src="https://www.iconpacks.net/icons/1/free-microphone-icon-342-thumb.png"
+              alt=""
+            />
+          </div>
+          <div class="content">
+            <div class="content-titulo">Microphone</div>
+            <p class="content-subtitulo">For everyone to hear you</p>
+          </div>
 
-      <div class="input-conteiner">
-        <input class="input" type="text" placeholder="Ingresa su texto aqui" />
-        <img src="lupa.png" alt="" />
-      </div>
-      <div class="btn">
-        <button>Click</button>
+          <div class="switch"><button></button></div>
+        </div>
       </div>
     </div>
   </body>
