--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
           Como puedo centrar verticalmente y horizontalmente a los hijos en un
           contenedor flex box
         </li>
+        <li>Que es un input? como agregarlo y estilizarlo?</li>
+        <li>Que es un input type password</li>
         <li>
-          Puede un div tener 2 clases diferentes? por ejempo class= "caja
-          caja-1" Para que me serviria hacer eso?
+          como cambiar el color de outline de un input mientras se escribe?
         </li>
+        <li>Como cambiar el color del placeholder de un input</li>
         <li>
-          Que es object fit? solo sirve si lo aplico a la imagen hija, y no al
-          padre? tengo un div con un img dentro
+          Como cambiar el color de fondo de un boton cuando le dan click, osea
+          active.
         </li>
-
         <li>
           Puedo tener muchos div dentros de otros? por ejemplo un div con 5 div
           dentros, cada div hijo tiene 3 img
@@ -38,55 +39,24 @@
         </li>
 
         <li>Que es "transtition: all 1s" como lo uso?</li>
-        <li>Que es Z-index?</li>
       </ul>
     </div>
     <div class="conteiner">
       <div class="menu">
         <div class="header">
-          <div class="titulo">Just a minute</div>
-          <div class="subtitle">Give access to your devices</div>
+          <div class="titulo">Sign In</div>
+          <div class="subtitle">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </div>
         </div>
-        <div class="option">
-          <div class="icon">
-            <img
-              src="https://www.iconpacks.net/icons/1/free-microphone-icon-342-thumb.png"
-              alt=""
-            />
-          </div>
-          <div class="content">
-            <div class="content-titulo">Microphone</div>
-            <p class="content-subtitulo">For everyone to hear you</p>
-          </div>
-          <div class="switch"><button></button></div>
-        </div>
-        <div class="option">
-          <div class="icon">
-            <img
-              src="https://www.iconpacks.net/icons/1/free-microphone-icon-342-thumb.png"
-              alt=""
-            />
-          </div>
-          <div class="content">
-            <div class="content-titulo">Microphone</div>
-            <p class="content-subtitulo">For everyone to hear you</p>
-          </div>
-          <div class="switch"><button></button></div>
-        </div>
-        <div class="option">
-          <div class="icon">
-            <img
-              src="https://www.iconpacks.net/icons/1/free-microphone-icon-342-thumb.png"
-              alt=""
-            />
-          </div>
-          <div class="content">
-            <div class="content-titulo">Microphone</div>
-            <p class="content-subtitulo">For everyone to hear you</p>
-          </div>
 
-          <div class="switch"><button></button></div>
-        </div>
+        <input class="input" type="text" placeholder="Email or phone" />
+        <input class="input" type="password" placeholder="Password" />
+
+        <div class="text">Forgit passsword</div>
+
+        <button class="btn">Sign In</button>
+        <button class="btn more">More</button>
       </div>
     </div>
   </body>
